# deepn-

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cleanbuild.sh  compile_win_linux.sh  conanfile.txt  config.pri  deepn++.pro  deepn.pro  deepn_windows.rc  env_vars  main.cpp  postbuild.sh  prebuild.sh
.cursor/rules/: classes.mdc  concurrency.mdc  data.mdc  functions.mdc  structure.mdc
backup/docker/linux/: default  entrypoint.sh
backup/docker/windows/: Dockerfile  default
backup/inputs/: genomes.yml
backup/scripts/GeneCount++/: gene_count.py  utils.py
backup/stat_maker/: AdvancedNBDispersion.cpp  AdvancedNBDispersion.h  CMakeLists.txt  customlistview.cpp  customlistview.h  datastructs.cpp  datastructs.h  main.cpp  mainwindow copy.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  signals.cpp  signals.h  statsmake.cpp  statsmake.h
backup/stat_maker/jags/lib/: libjags.4.dylib  libjags.dylib  libjags.la  libjrmath.0.dylib  libjrmath.dylib  libjrmath.la
backup/stat_maker/jags/lib/JAGS/modules-4/: basemod.la  bugs.la  dic.la  glm.la  lecuyer.la  mix.la  msm.la
backup/stat_maker/jags/lib/pkgconfig/: jags.pc
backup/stat_maker/jags/libexec/: jags-terminal
backup/statmaker_R/: stat.csv
cmake/: build_blat.sh  bundle_gene_count_data.cmake  bundle_junction_dice_data.cmake  codesign.cmake  entitlements.plist
cmake-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
cmake-build/deepn/: cmake_install.cmake
cmake-build/deseq2/: cmake_install.cmake
cmake-build/deseq2/statistics/: cmake_install.cmake  example_usage  test_deseq2
cmake-build/deseq2/ui/: cmake_install.cmake
cmake-build/gene_count/: cmake_install.cmake
cmake-build/junction_dice/: cmake_install.cmake
cmake-build/junction_dice/JunctionDice++_autogen/: deps  mocs_compilation.cpp
cmake-build/query/: cmake_install.cmake
cmake-build/query/MultiQuery++_autogen/: deps  mocs_compilation.cpp
cmake-build/read_depth/: cmake_install.cmake
cmake-build/read_depth/ReadDepth++_autogen/: deps  moc_predefs.h  (+1 more)
data/: MM10GeneList2023.unique.fasta.json  MM10GeneList2023.unique.fasta.sqlite  SacCer3_yeast_GeneList2023.unique.fasta.json  SacCer3_yeast_GeneList2023.unique.fasta.sqlite  deepn.json  deepn.sqlite  hg38GeneList2023.unique.fasta.json  hg38GeneList2023.unique.fasta.sqlite
data/blast_db/: hg38NMgenes.db.fa  hg38NMgenes.db.nin  sacCer3.db.nhr  sacCer3.db.nin  sacCer3.db.nsq
data/gene_dictionary/: deepn.sqlite  export_sqlite.py  genome.json
data/gene_list/: hg38GeneList.prn  mm10GeneList.prn  sacCer3GeneList.prn
deepn/: CMakeLists.txt  conanfile.txt  darkpaint.h  deepn.pro  dqtextedit.cpp  dqtextedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
deepn_common/: CMakeLists.txt
deepn_common/include/: batch_runner.h  csv_utils.h  data_structures.h  depth_calculator.h  export_dialog.h  export_engine.h  gene_annotation_db.h  gene_selector_widget.h  loading_overlay.h  mrna_track_widget.h  sqlite_junction_loader.h  startup_loader.h  sync_controller.h
deepn_common/src/: batch_runner.cpp  csv_utils.cpp  depth_calculator.cpp  export_dialog.cpp  export_engine.cpp  gene_annotation_db.cpp  gene_selector_widget.cpp  loading_overlay.cpp  mrna_track_widget.cpp  sqlite_junction_loader.cpp  startup_loader.cpp  sync_controller.cpp
deseq2/: CMakeLists.txt  build.sh
deseq2/docs/: README_MACOS_BUNDLE.md
deseq2/statistics/: CMakeLists.txt  analyze_results.py  build.sh
deseq2/statistics/docs/: COMPLETE_PPM_ANALYSIS_GUIDE.md  EXAMPLE_USAGE.md  PPM_CONVERSION_GUIDE.md  README.md  README_PPM_ANALYSIS.md
deseq2/statistics/example/: HDPTP_Tail_2_NON_50M_summary.csv  HDPTP_Tail_2_SEL_50N_summary.csv  HDPTP_V_NON_51M_summary.csv  HDPTP_V_SEL_51N_summary.csv  Tef_Vector1_Non_50A_summary.csv  Tef_Vector1_SEL_50B_summary.csv  Tef_Vector2_NON_51A_summary.csv  Tef_Vector2_SEL_51B_summary.csv
deseq2/statistics/include/: deseq_dataset.h  deseq_stats.h  utils.h  y2h_scores.h
deseq2/statistics/src/: deseq_dataset.cpp  deseq_stats.cpp  utils.cpp  y2h_scores.cpp
deseq2/statistics/tests/: example_ppm_deseq2_analysis.cpp  example_usage.cpp  test_deseq2.cpp  test_ppm_conversion.cpp  test_validation.cpp  test_y2h_scores.cpp
deseq2/ui/: CMakeLists.txt  CMakeLists.txt.qt5  DESeq2.icns  Info.plist  create_icon.sh
deseq2/ui/include/: gene_count_handler.h  main_window.h
deseq2/ui/src/: gene_count_handler.cpp  main.cpp  main_window.cpp  mainwindow.ui
docker/: Dockerfile  entrypoint.sh  makeimages.sh
docker/conan/: windows
docker/linux/: Dockerfile  default  entrypoint.sh
docker/windows/: Dockerfile  default  entrypoint.sh
gene_count/: CMakeLists.txt  conanfile.txt  datastructs.h  files.qrc  gcworker.cpp  gcworker.h  gene_count.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maphits.cpp  maphits.h  signals.h
gene_count/python/: gene_count.py
icons/: deepn_windows.rc  gene_count_windows.rc  junction_make_windows.rc  multi_query_windows.rc  read_depth_windows.rc
inputs/: genomes.yml
junction_dice/: CMakeLists.txt  datastructs.h  jdworker.cpp  jdworker.h  junction_dice.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signals.cpp  signals.h
junction_make/: CMakeLists.txt  conanfile.txt  junction_make.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
plans/: DESEQ2_INTEGRATION_PLAN.md  MULTIQUERY_PLAN.md  PROJECT_STATUS.md  READDEPTH_PLAN.md  Y2H_SCORES_INTEGRATION_PLAN.md
pythonqt/: pythonqt.pro
pythonqt/src/: src.pro
query/: CMakeLists.txt  comparison_manager.cpp  comparison_manager.h  dockwidget.ui  gene_detail_panel.cpp  gene_detail_panel.h  junction_plot_widget.cpp  junction_plot_widget.h  junction_table_model.cpp  junction_table_model.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  query.pro
read_depth/: CMakeLists.txt  boundary_detector.cpp  boundary_detector.h  depth_plot_widget.cpp  depth_plot_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  read_depth.pro
src/: mainwindow.cpp
translations/: deepn_en_US.ts
ui/: mainwindow.ui
(+66 files in other folders)
